# chronos-hft

./: .clang-format  .gitignore  CMakeLists.txt  README.md
bench/: CMakeLists.txt  bench_feed.cpp  bench_hardware.cpp
cmake/: compilerflags.cmake
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: sample-trace.jsonl
frontend/src/: App.tsx  format.ts  index.css  types.ts
frontend/src/components/: DepthChart.tsx  FileLoader.tsx  Panel.tsx  PlaybackController.tsx  PnlChart.tsx  TickerTape.tsx
frontend/src/hooks/: usePlayback.ts
hardware/dpi/: feature_reference.hpp  fpga_dpi.cpp  fpga_dpi.hpp
hardware/rtl/: axi_stream_if.sv  feature_extractor.sv  frac_divider.sv  micro_price.sv  volume_imbalance.sv
hardware/tb/: cosim_check.cpp  tb_feature_extractor.sv
include/hft/book/: apply.hpp  order_book.hpp  order_index_map.hpp  price_level.hpp
include/hft/core/: byte_order.hpp  cache.hpp  compiler.hpp  memory_pool.hpp  types.hpp
include/hft/engine/: backtest_engine.hpp  book_update.hpp  fill_model.hpp  market_impact.hpp  metrics.hpp  strategy.hpp
include/hft/feed/: feed_handler.hpp  itch_generator.hpp  itch_parser.hpp  itch_protocol.hpp  market_event.hpp  pcap_reader.hpp  pcap_structures.hpp  spsc_ring.hpp
include/hft/metrics/: trace_extras.hpp  trace_logger.hpp
include/hft/signals/: alpha_engine.hpp
include/hft/strategies/: micro_price_mm.hpp  statistical_mm.hpp
scripts/: build.sh
src/: main.cpp  main_stat_mm.cpp
src/feed/: pcap_reader.cpp
src/strategies/: micro_price_mm.cpp  statistical_mm.cpp
tests/: CMakeLists.txt  check.hpp  test_alpha_engine.cpp  test_engine.cpp  test_feature_golden.cpp  test_feed_integration.cpp  test_itch_parser.cpp  test_market_impact.cpp  test_memory_pool.cpp  test_order_book.cpp  test_order_index_map.cpp  test_pcap.cpp  test_spsc_ring.cpp  test_statistical_mm.cpp  test_trace_logger.cpp
